# bookstore

./: README.md  pyproject.toml
bookstore/: settings.py  urls.py
