[tool.poetry]
name = "boostore"
version = "0.1.0"
description = "bookstore API"
authors = ["RobosetOutro <roberto.doria7@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
factory-boy = "^3.3.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
